MDEV-5811: Server crashes in best_access_path with materialization+semijoin and big_tables=ON - With big_tables=ON, materialized table will use Aria (or MyISAM) SE, which   allows prefix key reads. However, the temp.table has rec_per_key=NULL which   causes the optimizer to crash when attempting to read index statistics for a   prefix index read. - Fixed by providing a rec_per_key array with zeros (i.e. "no statistics data")